7026055: Regression : Cannot use IME on JComboBox Japanese

Reviewed-by: art, ant, naoto